--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Recipes</title>
     <script src="lib/jquery-1.6.4.min.js"></script>
+    <script src="lib/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="lib/json2.js"></script>
     <script src="lib/jquery.twfile.js"></script>
     <style>
