pulling out styles and js, refactoring recipe book

--- a/index.html
+++ b/index.html
@@ -5,26 +5,7 @@
     <script src="lib/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="lib/json2.js"></script>
     <script src="lib/jquery.twfile.js"></script>
-    <style>
-      ol { margin: 16px 0 0 40px; padding: 0 }
-      ol { list-style-type: none; }
-      ol.fields { width: 500px; }
-      ol.fields li { padding-top: 5px; }
-      ol.fields li.button { text-align: right; }
-      ol.fields li label { vertical-align: top; text-align: right; width: 190px; display: inline-block; }
-      ol.fields li input[type=text], textarea { width: 300px; }
-      ol.fields li button { margin-right: 5px; }
-      ol.side-by-side li { vertical-align: top; display: inline-block; }
-      ol.side-by-side ol li { display: block; }
-      ol#selection { width: 100%; }
-      ol#selection li select { min-width: 245px; }
-      ol#selection li label { display: block; }
-      #tag-group-form { display: none }
-      ol #tag-groups { min-width: 490px; }
-      ol #current-tag-group { min-height: 100px }
-      ol.draggable { background-color: #EEE; padding: 20px; }
-      ol#tag-group-fields ol { min-width: 160px; }
-    </style>
+    <link rel="stylesheet" href="stylesheets/screen.css" type="text/css"></link>
   </head>
   <body>
     <h1>Recipes!</h1>
@@ -88,199 +69,9 @@
         </li>
       </ol>
     </form>
+    <script src="javascripts/recipe_book.js" type="text/javascript"></script>
     <script>
-      var recipeBook = {
-        init : function() {
-          var filePath = document.location.href;
-          filePath = $.twFile.convertUriToLocalPath(filePath);
-          filePath = filePath.replace(/index.html/, '');
-          this.filePath = filePath + 'data.json';
-          this.load();
-        },
-
-        clearForm : function() {
-          $('#title').val('');
-          $('#description').val('');
-          $('#tags').val('');
-        },
-
-        changeRecipe : function(id) {
-          console.log(id);
-          if(id == 0) {
-            this.clearForm();
-            return;
-          }
-          this.recipe = this.getRecipe(id);
-          console.log(this.recipe);
-          $('#recipe-list').val(id);
-          $('#title').val(this.recipe.title);
-          $('#description').val(this.recipe.description);
-          $('#tags').val(this.recipe.tags.join(', '));
-        },
-
-        filterRecipes : function(tag) {
-          console.log('filtering by: ' + tag);
-          if(tag == '') {
-            this.tagFilter = ''
-          }
-          this.tagFilter = tag;
-          this.bindList();
-        },
-
-        saveRecipe : function() {
-          if(this.isNewRecipe()) { this.recipes.push(this.recipe); }
-          this.updateRecipe(this.recipe);
-          this.save();
-          this.bindList();
-          this.changeRecipe(this.recipe.id);
-        },
-
-        save : function() {
-          var data = {
-            recipes : this.recipes,
-            tagGroups : this.tagGroups
-          };
-          var jsonData = JSON.stringify(data, null, 2);
-          $.twFile.save(this.filePath, jsonData)
-        },
-
-        currentId : function() {
-          var id = parseInt($('#recipe-list').val());
-          return id == 0;
-        },
-
-        isNewRecipe : function() {
-          var id = parseInt($('#recipe-list').val());
-          return id == 0;
-        },
-
-        newRecipe : function() {
-          this.recipe = {
-            id: this.getNextId(),
-            name: '',
-            description: '',
-            tags: []
-          };
-        },
-
-        getRecipe : function(id) {
-          for(var i = 0; i < this.recipes.length; i++) {
-            var recipe = this.recipes[i];
-            if(recipe.id == id) { return recipe; }
-          }
-        },
-
-        updateRecipe : function(recipe) {
-          recipe.title = $('#title').val(),
-          recipe.description = $('#description').val(),
-          recipe.tags = this.buildTags()
-        },
-
-        buildTags : function() {
-          var list = $('#tags').val().split(',');
-          return $.map(list, function (item, index) {
-            if(item == '') { return null; }
-            return item.trim();
-          });
-        },
-
-        getNextId : function() {
-          if(this.recipes.length == 0) {
-            return 1;
-          }
-          return this.recipes[this.recipes.length -1].id + 1;
-        },
-
-        load : function() {
-          fileContents = $.twFile.load(this.filePath)
-          console.log('file contents: ' + fileContents);
-          if(fileContents) {
-            var data = JSON.parse(fileContents);
-            this.recipes = data.recipes;
-            this.tagGroups = data.tagGroups;
-          } else {
-            this.recipes = [];
-            this.tagGroups = [];
-          }
-          console.log(this.recipes);
-          this.newRecipe();
-          this.buildTagIndex();
-          this.bindTags();
-          this.bindList();
-          this.bindTagGroups();
-          this.bindUngroupedTags();
-        },
-
-        buildTagIndex : function() {
-          this.tags = [];
-          var tags = this.tags;
-          $.each(this.recipes, function(index, recipe) {
-            $.each(recipe.tags, function(tagIndex, tag) {
-              var notPresent = $.inArray(tag, tags) == -1;
-              if(notPresent) { tags.push(tag); }
-            });
-          });
-        },
-
-        bindTags : function() {
-          var list = $('#tag-list');
-          list.append($('<option />').val('').text('All'));
-          $.each(this.tags, function(index, tag) {
-            list.append($('<option />').val(tag).text(tag));
-          });
-        },
-
-        isFilterSet : function() {
-          return typeof(this.tagFilter) != 'undefined' && this.tagFilter != '';
-        },
-
-        bindList : function() {
-          var list = $('#recipe-list');
-          this.clearForm();
-          list.find('option').remove();
-          list.append($('<option />').val(0).text('New Recipe'));
-          list.val(0);
-          var noFilter = !this.isFilterSet();
-          var tagFilter = this.tagFilter;
-          $.each(this.recipes, function() {
-            var present = $.inArray(tagFilter, this.tags) != -1;
-            if(noFilter || present) {
-              list.append($('<option />').val(this.id).text(this.title));
-            }
-          });
-        },
-
-        bindTagGroups : function() {
-          var groups = $('#tag-groups');
-          var currentGroup = $('#current-tag-group');
-          groups.find('option').remove();
-          $.each(this.tagGroups, function() {
-            groups.append($('<option />').val(this.name).text(this.name));
-          });
-        },
-
-        bindUngroupedTags : function() {
-          var tagGroups = this.tagGroups;
-          var tagList = $('#ungrouped-tags');
-          var group = $('#current-tag-group').val();
-          $.each(this.tags, function() {
-            var notInGroup = $.inArray(this, group) == -1;
-            if(notInGroup) {
-              tagList.append('<li>' + this + '</li>');
-            }
-          });
-        },
-
-        addTagGroup : function() {
-          var group = {
-            name: $('#new-tag-group').val(),
-            tags: []
-          };
-          this.tagGroups.push(group);
-          this.save();
-          this.bindTagGroups();
-        }
-      }
+      var recipeBook = new RecipeBook();
 
       function addTagGroup(e) {
         e.preventDefault();
