--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="lib/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="lib/json2.js"></script>
     <script src="lib/jquery.twfile.js"></script>
+    <script src="lib/underscore.min.js"></script>
     <link rel="stylesheet" href="stylesheets/screen.css" type="text/css"></link>
   </head>
   <body>
